新增快速魔法棒棒，以及修bug

--- a/StarProject/Views/Product/Create.cshtml
+++ b/StarProject/Views/Product/Create.cshtml
@@ -10,6 +10,7 @@
             padding: 0;
             margin: 0;
         }
+
         .btn-topbar {
             --bs-btn-bg: rgb(250, 208, 72);
             --bs-btn-border-color: rgb(250, 208, 72);
@@ -20,6 +21,7 @@
             --bs-btn-active-border-color: #ffc720;
             --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
         }
+
         .btn-outline-back {
             --bs-btn-color: #DC3545;
             --bs-btn-border-color: #DC3545;
@@ -47,92 +49,101 @@
         }
     </style>
 </head>
-<h1 class="fw-bold">新品上架</h1>
 
-<div class="p-4 mt-3 rounded-4 bg-white">
-    <h3 class="fw-bold mb-3"><i class="fa-solid fa-circle-info me-2"></i>基本資料</h3>
-    <ul class="nav nav-tabs border-bottom-0">
-        <li class="nav-item">
-            <a class="nav-link active fs-5 text-black" data-bs-toggle="tab" href="#single">單筆建檔</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link fs-5 text-black" data-bs-toggle="tab" href="#multiple">批次上傳</a>
-        </li>
-    </ul>
-    <div class="tab-content border border-top rounded-end rounded-bottom">
-        <div class="tab-pane fade show active" id="single">
-            <div class="row">
-                <div class="col-6 m-5">
-                    <form asp-action="Create">
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Name" class="control-label"></label>
+<div class="position-relative">
+    <h1 class="fw-bold">新品上架</h1>
+
+    <div class="p-4 mt-3 rounded-4 bg-white">
+        <h3 class="fw-bold mb-3"><i class="fa-solid fa-circle-info me-2"></i>基本資料</h3>
+        <ul class="nav nav-tabs border-bottom-0">
+            <li class="nav-item">
+                <a class="nav-link active fs-5 text-black" data-bs-toggle="tab" href="#single">單筆建檔</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link fs-5 text-black" data-bs-toggle="tab" href="#multiple">批次上傳</a>
+            </li>
+        </ul>
+        <div class="tab-content border border-top rounded-end rounded-bottom">
+            <div class="tab-pane fade show active" id="single">
+                <div class="row">
+                    <div class="col-6 m-5">
+                        <form asp-action="Create">
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Name" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="Name" id="inputName" class="form-control" placeholder="商品名稱不可超過30個字" />
+                                    <span asp-validation-for="Name" class="text-danger"></span>
+                                </div>
                             </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="Name" class="form-control" placeholder="商品名稱不可超過30個字" />
-                                <span asp-validation-for="Name" class="text-danger"></span>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="ProCategoryNoNavigation.Name" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <select asp-for="ProCategoryNo" id="selectCat" class="form-select" asp-items="ViewBag.ProCategoryName"></select>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="ProCategoryNoNavigation.Name" class="control-label"></label>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Price" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="Price" id="inputPrice" class="form-control" />
+                                    <span asp-validation-for="Price" class="text-danger"></span>
+                                </div>
                             </div>
-                            <div class="col-8 col-lg-10">
-                                <select asp-for="ProCategoryNo" class="form-select" asp-items="ViewBag.ProCategoryName"></select>
+                            <div class="form-groupd d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Status" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <select asp-for="Status" id="selectStatus" class="form-select" asp-items="ViewBag.StatusList"></select>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Price" class="control-label"></label>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="ReleaseDate" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="ReleaseDate" id="inputRelease" class="form-control" />
+                                    <span asp-validation-for="ReleaseDate" class="text-danger"></span>
+                                </div>
                             </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="Price" class="form-control" />
-                                <span asp-validation-for="Price" class="text-danger"></span>
+                            <div class="form-group d-flex gap-2 mt-2">
+                                <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5">
+                                    <i class="fa-solid fa-plus me-2"></i>新增
+                                </button>
+                                <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
                             </div>
-                        </div>
-                        <div class="form-groupd d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Status" class="control-label"></label>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="multiple">
+                <div class="row">
+                    <div class="col-6 m-5">
+                        <a asp-controller="Product" asp-action="DownloadTemplate" class="btn btn-outline-excel fw-bold fs-5 mb-3">
+                            <i class="fa-solid fa-file-excel"></i>下載excel範本
+                        </a>
+                        <form asp-controller="Product" asp-action="CreateMultiple" method="post" enctype="multipart/form-data" id="excelUploadForm">
+                            <input type="file" class="form-control fs-5" name="excelFile">
+                            <div class="form-group d-flex gap-2 mt-3">
+                                <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5" for="excelFile">上傳匯入</button>
+                                <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
                             </div>
-                            <div class="col-8 col-lg-10">
-                                <select asp-for="Status" class="form-select" asp-items="ViewBag.StatusList"></select>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="ReleaseDate" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="ReleaseDate" class="form-control" />
-                                <span asp-validation-for="ReleaseDate" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex gap-2 mt-2">
-                            <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5">
-                                <i class="fa-solid fa-plus me-2"></i>新增
-                            </button>
-                            <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="multiple">
-            <div class="row">
-                <div class="col-6 m-5">
-                    <a asp-controller="Product" asp-action="DownloadTemplate" class="btn btn-outline-excel fw-bold fs-5 mb-3">
-                        <i class="fa-solid fa-file-excel"></i>下載excel範本
-                    </a>
-                    <form asp-controller="Product" asp-action="CreateMultiple" method="post" enctype="multipart/form-data" id="excelUploadForm">
-                        <input type="file" class="form-control fs-5" name="excelFile">
-                        <div class="form-group d-flex gap-2 mt-3">
-                            <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5" for="excelFile">上傳匯入</button>
-                            <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+    </div>
+    <div class="position-absolute top-0 end-0 m-2 me-4">
+        <button type="button" id="fillTestData" class="btn btn-light fw-bold fs-6 d-flex justify-content-center align-items-center"
+                style="width:40px; height:40px; border-radius:50%; border: 1px solid #D0CBCB;">
+            <i class="fa-solid fa-wand-sparkles"></i>
+        </button>
     </div>
 </div>
 
@@ -164,6 +175,15 @@
 
     <script>
         $(function () {
+
+            $("#fillTestData").on("click", function() {
+                $("#inputName").val("太空人造型LED發光鑰匙圈");
+                $('#selectCat').val("PROSTA").trigger("change");
+                $('#inputPrice').val("280");
+                $('#selectStatus').val("上架");
+                $('#inputRelease').val("2025-09-19");
+            })
+
             $('#excelUploadForm').on('submit', function (e) {
                 e.preventDefault();
 
