--- a/StarProject/Views/Product/Index.cshtml
+++ b/StarProject/Views/Product/Index.cshtml
@@ -6,6 +6,14 @@
 }
 <head>
     <style>
+        .carousel-control-prev-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23d3d3d3' viewBox='0 0 8 8'%3E%3Cpath d='M5.5 0L4.5 1 1 4.5 4.5 8 5.5 7 2.5 4.5z'/%3E%3C/svg%3E");
+        }
+
+        .carousel-control-next-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23d3d3d3' viewBox='0 0 8 8'%3E%3Cpath d='M2.5 0L3.5 1 7 4.5 3.5 8 2.5 7 5.5 4.5z'/%3E%3C/svg%3E");
+        }
+
         .bg-offcanvasPoint{
             background-color: #F4F1FF;
         }
@@ -137,7 +145,7 @@
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="預購" id="status2">
                                     <label class="form-check-label" for="status2">
-                                            預購
+                                        預購
                                     </label>
                                 </div>
                                 <div class="form-check">
