--- a/StarProject/Views/ProductStock/Index.cshtml
+++ b/StarProject/Views/ProductStock/Index.cshtml
@@ -12,7 +12,7 @@
 	<!-- 標題+新增 -->
 	<div class="d-flex align-items-center mb-3">
 		<h1 class="fw-bold flex-grow-1 mb-0">商品庫存管理</h1>
-		<a asp-action="Create" class="btn btn-search fw-bold"><i class="fa-solid fa-plus"></i> 新增</a>
+		<a asp-action="Create" class="btn btn-search fw-bold"><i class="fa-solid fa-gear"></i> 設定庫存</a>
 	</div>
 
 	<!-- CSRF Token -->
