--- a/StarProject/Views/TicketStock/Index.cshtml
+++ b/StarProject/Views/TicketStock/Index.cshtml
@@ -54,7 +54,7 @@
     <!-- 標題+新增 -->
     <div class="d-flex align-items-center mb-3">
         <h1 class="fw-bold flex-grow-1 mb-0">票券庫存管理</h1>
-        <a asp-action="Create" class="btn btn-search fw-bold"><i class="fa-solid fa-plus"></i> 設定庫存</a>
+        <a asp-action="Create" class="btn btn-search fw-bold"><i class="fa-solid fa-gear"></i> 設定庫存</a>
     </div>
 
     <!-- CSRF Token -->
