--- a/StarProject/Views/ProductStock/Create.cshtml
+++ b/StarProject/Views/ProductStock/Create.cshtml
@@ -49,74 +49,95 @@
         }
     </style>
 </head>
-<h1 class="fw-bold">商品庫存設定</h1>
-<div class="p-4 mt-3 rounded-4 bg-white">
-            <div class="row">
-                <div class="col-6 my-5 ms-5">
-                    <form asp-action="Create" method="post" enctype="multipart/form-data">
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="ProductNo" class="control-label"></label>
+<div class="position-relative">
+    <h1 class="fw-bold">商品庫存設定</h1>
+    <div class="p-4 mt-3 rounded-4 bg-white">
+                <div class="row">
+                    <div class="col-6 my-5 ms-5">
+                        <form asp-action="Create" method="post" enctype="multipart/form-data">
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="ProductNo" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="ProductNo" id="inputNo" class="form-control" />
+                                    <span asp-validation-for="ProductNo" class="text-danger"></span>
+                                </div>
                             </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="ProductNo" class="form-control" />
-                                <span asp-validation-for="ProductNo" class="text-danger"></span>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="ProductNoNavigation.Name" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input id="ProductName" class="form-control-plaintext" readonly />
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="ProductNoNavigation.Name" class="control-label"></label>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Type" class=" control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <select asp-for="Type" id="selectType" class="form-select" asp-items="ViewBag.TransType"></select>
+                                </div>
                             </div>
-                            <div class="col-8 col-lg-10">
-                            <input id="ProductName" class="form-control" readonly form-control-plaintext />
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="TransQuantity" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="TransQuantity" id="inputQ" class="form-control" />
+                                    <span asp-validation-for="TransQuantity" class="text-danger"></span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Type" class=" control-label"></label>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Note" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="Note" id="inputNote" class="form-control" />
+                                    <span asp-validation-for="Note" class="text-danger"></span>
+                                </div>
                             </div>
-                            <div class="col-8 col-lg-10">
-                                <select asp-for="Type" class="form-select" asp-items="ViewBag.TransType"></select>
+                            <div class="form-group d-flex gap-2 mt-2">
+                                <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5">
+                                    <i class="fa-solid fa-plus me-2"></i>新增
+                                </button>
+                                <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
                             </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="TransQuantity" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="TransQuantity" class="form-control" />
-                                <span asp-validation-for="TransQuantity" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Note" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="Note" class="form-control" />
-                                <span asp-validation-for="Note" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex gap-2 mt-2">
-                            <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5">
-                                <i class="fa-solid fa-plus me-2"></i>新增
-                            </button>
-                            <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
-                        </div>
-                    </form>
+                        </form>
+                </div>
             </div>
-        </div>
+    </div>
+
+    <div class="position-absolute top-0 end-0 m-2 me-4">
+        <button type="button" id="fillTestData" class="btn btn-light fw-bold fs-6 d-flex justify-content-center align-items-center"
+                style="width:40px; height:40px; border-radius:50%; border: 1px solid #D0CBCB;">
+            <i class="fa-solid fa-wand-sparkles"></i>
+        </button>
+    </div>
+
+
+
 </div>
+
 
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        <script>
+            $("#fillTestData").on("click", function() {
+                $("#inputNo").val("1100");
+                // $('#selectType').val("入庫").trigger("change");
+                $('#inputQ').val("10");
+                $('#inputNote').val("第一次進貨");
+            })</script>
     }
 }
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
-        $('#ProductNo').on('blur', function () { // 當欄位失去焦點時
+
+        $('#inputNo').on('blur', function () { // 當欄位失去焦點時
             var productNo = $(this).val();
             if (!productNo) return;
 
@@ -139,4 +160,7 @@
         });
     });
 </script>
-}
+
+
+
+
