--- a/StarProject/Views/Ticket/Create.cshtml
+++ b/StarProject/Views/Ticket/Create.cshtml
@@ -65,124 +65,143 @@
         }
     </style>
 </head>
-<h1 class="fw-bold">票券建立</h1>
 
-<div class="p-4 mt-3 rounded-4 bg-white">
-    <h3 class="fw-bold mb-3"><i class="fa-solid fa-circle-info me-2"></i>基本資料</h3>
-    <ul class="nav nav-tabs border-bottom-0">
-        <li class="nav-item">
-            <a class="nav-link active fs-5 text-black" data-bs-toggle="tab" href="#single">單筆建檔</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link fs-5 text-black" data-bs-toggle="tab" href="#multiple">批次上傳</a>
-        </li>
-    </ul>
-    <div class="tab-content border border-top rounded-end rounded-bottom">
-        <div class="tab-pane fade show active" id="single">
-            <div class="row">
-                <div class="col-6 my-5 ms-5">
-                    <form asp-action="Create" method="post" enctype="multipart/form-data">
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Name" class="control-label"></label>
+<div class="position-relative">
+
+    <h1 class="fw-bold">票券建立</h1>
+
+    <div class="p-4 mt-3 rounded-4 bg-white">
+        <h3 class="fw-bold mb-3"><i class="fa-solid fa-circle-info me-2"></i>基本資料</h3>
+        <ul class="nav nav-tabs border-bottom-0">
+            <li class="nav-item">
+                <a class="nav-link active fs-5 text-black" data-bs-toggle="tab" href="#single">單筆建檔</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link fs-5 text-black" data-bs-toggle="tab" href="#multiple">批次上傳</a>
+            </li>
+        </ul>
+        <div class="tab-content border border-top rounded-end rounded-bottom">
+            <div class="tab-pane fade show active" id="single">
+                <div class="row">
+                    <div class="col-6 my-5 ms-5">
+                        <form asp-action="Create" method="post" enctype="multipart/form-data">
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Name" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="Name" id="inputName" class="form-control" placeholder="票券名稱不可超過30個字" />
+                                    <span asp-validation-for="Name" class="text-danger"></span>
+                                </div>
                             </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="Name" class="form-control" placeholder="票券名稱不可超過30個字" />
-                                <span asp-validation-for="Name" class="text-danger"></span>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="ImageFile" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="ImageFile" type="file" class="form-control" accept="image/*" onchange="previewImage(event)" />
+                                    <span asp-validation-for="ImageFile" class="text-danger"></span>
+                                </div>
                             </div>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label class="control-label">票券種類</label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <select asp-for="TicCategoryNo" id="selectCat" class="form-select" asp-items="ViewBag.TicCategoryNo"></select>
+                                </div>
+                            </div>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Type" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <select asp-for="Type" id="selectType" class="form-select" asp-items="ViewBag.TypeList"></select>
+                                </div>
+                            </div>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Price" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="Price" id="inputPrice" class="form-control" />
+                                    <span asp-validation-for="Price" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="ReleaseDate" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <input asp-for="ReleaseDate" id="inputRelease" class="form-control" />
+                                    <span asp-validation-for="ReleaseDate" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group d-flex align-items-center mb-3 row">
+                                <div class="col-4 col-lg-2 fw-bold fs-5">
+                                    <label asp-for="Desc" class="control-label"></label>
+                                </div>
+                                <div class="col-8 col-lg-10">
+                                    <textarea asp-for="Desc" id="inputDesc" class="form-control" rows="5" style="resize: none;" placeholder="選填，最多50個字"></textarea>
+                                    <span asp-validation-for="Desc" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group d-flex gap-2 mt-2">
+                                <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5">
+                                    <i class="fa-solid fa-plus me-2"></i>新增
+                                </button>
+                                <a asp-controller="Ticket" asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col my-5 ms-3">
+                        <div class="img500px">
+                            <!-- 圖片預覽 -->
+                            <img id="preview" src="#" alt="圖片預覽" />
                         </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="ImageFile" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="ImageFile" type="file" class="form-control" accept="image/*" onchange="previewImage(event)" />
-                                <span asp-validation-for="ImageFile" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label class="control-label">票券種類</label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <select asp-for="TicCategoryNo" class="form-select" asp-items="ViewBag.TicCategoryNo"></select>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Type" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <select asp-for="Type" class="form-select" asp-items="ViewBag.TypeList"></select>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Price" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="Price" class="form-control" />
-                                <span asp-validation-for="Price" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="ReleaseDate" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <input asp-for="ReleaseDate" class="form-control" />
-                                <span asp-validation-for="ReleaseDate" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Desc" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <textarea asp-for="Desc" class="form-control" rows="5" style="resize: none;" placeholder="選填，最多50個字"></textarea>
-                                <span asp-validation-for="Desc" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group d-flex gap-2 mt-2">
-                            <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5">
-                                <i class="fa-solid fa-plus me-2"></i>新增
-                            </button>
-                            <a asp-controller="Ticket" asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
-                        </div>
-                    </form>
+                    </div>
                 </div>
-                <div class="col my-5 ms-3">
-                    <div class="img500px">
-                        <!-- 圖片預覽 -->
-                        <img id="preview" src="#" alt="圖片預覽" />
+            </div>
+            <div class="tab-pane fade" id="multiple">
+                <div class="row">
+                    <div class="col-6 m-5">
+                        <a asp-controller="Ticket" asp-action="DownloadTemplate" class="btn btn-outline-excel fw-bold fs-5 mb-3">
+                            <i class="fa-solid fa-file-excel"></i>下載excel範本
+                        </a>
+                        <form asp-controller="Ticket" asp-action="CreateMultiple" method="post" enctype="multipart/form-data">
+                            <input type="file" class="form-control fs-5" name="excelFile">
+                            <div class="form-group d-flex gap-2 mt-3">
+                                <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5" for="excelFile">上傳匯入</button>
+                                <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="multiple">
-            <div class="row">
-                <div class="col-6 m-5">
-                    <a asp-controller="Ticket" asp-action="DownloadTemplate" class="btn btn-outline-excel fw-bold fs-5 mb-3">
-                        <i class="fa-solid fa-file-excel"></i>下載excel範本
-                    </a>
-                    <form asp-controller="Ticket" asp-action="CreateMultiple" method="post" enctype="multipart/form-data">
-                        <input type="file" class="form-control fs-5" name="excelFile">
-                        <div class="form-group d-flex gap-2 mt-3">
-                            <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5" for="excelFile">上傳匯入</button>
-                            <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+    </div>
+
+    <div class="position-absolute top-0 end-0 m-2 me-4">
+        <button type="button" id="fillTestData" class="btn btn-light fw-bold fs-6 d-flex justify-content-center align-items-center"
+                style="width:40px; height:40px; border-radius:50%; border: 1px solid #D0CBCB;">
+            <i class="fa-solid fa-wand-sparkles"></i>
+        </button>
     </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
-
     <script>
+         $("#fillTestData").on("click", function() {
+            $("#inputName").val("太陽系探險家");
+            $("#selectCat").val("TICSPE").trigger("change");;
+            $("#selectType").val("普通票").trigger("change");;
+            $("#inputPrice").val("80");
+            $("#inputRelease").val("2025-09-19");
+            $('#inputDesc').val("一般12歲以上民眾。");
+         })
+
+
         function previewImage(event) {
             const file = event.target.files[0];
             if (file) {
@@ -192,3 +211,7 @@
             }
         }
     </script>
+
+}
+
+
