--- a/StarProject/Views/OrderStatus/EditDelivery.cshtml
+++ b/StarProject/Views/OrderStatus/EditDelivery.cshtml
@@ -1,5 +1,7 @@
 ﻿@model StarProject.Models.OrderDelivery
-
+@{
+    ViewData["Title"] = "出貨單確認";
+}
 <style>
     body {
         background-image: url(https://cdn.pixabay.com/photo/2021/01/17/02/02/planets-5923806_1280.jpg);
