--- a/StarProject/Views/OrderStatus/Index.cshtml
+++ b/StarProject/Views/OrderStatus/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model List<StarProject.Models.OrderMaster>
 
+@{
+    ViewData["Title"] = "出貨管理";
+}
+
  <style>
     body {
         background-image: url(https://cdn.pixabay.com/photo/2021/01/17/02/02/planets-5923806_1280.jpg);
