--- a/StarProject/Views/OrderDelivery/Index.cshtml
+++ b/StarProject/Views/OrderDelivery/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<StarProject.Models.OrderDelivery>
+@{
+    ViewData["Title"] = "出貨單列表";
+}
 <style>
     body {
         background-image: url(https://cdn.pixabay.com/photo/2021/01/17/02/02/planets-5923806_1280.jpg);
