--- a/StarProject/Views/Orders/Index.cshtml
+++ b/StarProject/Views/Orders/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model PagedResult<StarProject.Models.OrderMaster>
+@{
+    ViewData["Title"] = "訂單總覽";
+}
 @using Microsoft.AspNetCore.Mvc.Rendering
 <style>
     body {
