變更索引標籤文字

--- a/StarProject/Views/Analysis/Index.cshtml
+++ b/StarProject/Views/Analysis/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "月營收與回歸分析";
+    ViewData["Title"] = "月營收與迴歸分析";
     var productCategories = ViewBag.ProductCategories as List<string>;
 }
 
