--- a/StarProject/Views/Role/Index.cshtml
+++ b/StarProject/Views/Role/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<StarProject.Models.Role>
 @using StarProject.Helpers
 @{
-    ViewData["Title"] = "權限管理";
+    ViewData["Title"] = "員工權限管理";
 }
 
 <div class="container-fluid">
