--- a/StarProject/Views/Users/Index.cshtml
+++ b/StarProject/Views/Users/Index.cshtml
@@ -2,7 +2,7 @@
 @model List<UsersDTO>
 
 @{
-    ViewData["Title"] = "會員列表";
+    ViewData["Title"] = "會員管理";
 }
 <head>
     <link href="~/css/lostinfoindex.min.css" rel="stylesheet" />
