--- a/StarProject/Views/Emps/Index.cshtml
+++ b/StarProject/Views/Emps/Index.cshtml
@@ -2,7 +2,7 @@
 @Html.AntiForgeryToken()
 
 @{
-    ViewData["Title"] = "員工列表";
+    ViewData["Title"] = "員工帳號管理";
 }
 <head>
     <link href="~/css/lostinfoindex.min.css" rel="stylesheet" />
