--- a/StarProject/Views/CompanyNotifies/Create.cshtml
+++ b/StarProject/Views/CompanyNotifies/Create.cshtml
@@ -143,7 +143,7 @@
                         </ul>
                         <p>交通及住宿皆由公司統一安排，住宿提供舒適雙人房。請各位同仁於 <strong>2025 年 12 月 10 日前</strong> 線上報名。</p>
                         <p>提醒同仁攜帶保暖衣物、滑雪裝備（可自備或租借）及護照，遵守導遊指示並注意安全。</p>
-                        <p>人資部敬上</p>
+                        <p>活動企劃部敬上</p>
                     `);
                 } else {
                     // fallback 到 textarea
@@ -159,7 +159,7 @@
                         </ul>
                         <p>交通及住宿皆由公司統一安排，住宿提供舒適雙人房。請各位同仁於 <strong>2025 年 12 月 10 日前</strong> 線上報名。</p>
                         <p>提醒同仁攜帶保暖衣物、滑雪裝備（可自備或租借）及護照，遵守導遊指示並注意安全。</p>
-                        <p>人資部敬上</p>
+                        <p>活動企劃部敬上</p>
                     `);
                 }
             });
